(fix) spacing between buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,7 @@ h2 {
 .text-box {
     height: 16px;
 }
+
+.hero-button {
+    margin-bottom: 10px;
+}
